--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -109,3 +109,7 @@ table tr:nth-child(even) > td {
     border-bottom: 0;
   }
 }
+
+.web-console {height:75px; overflow:scroll; border:1px solid #ddd}
+.web-console ul {padding:0; margin:0}
+.web-console li {list-style-type:none; padding-left:1em}
