--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -14,7 +14,8 @@
   <body>
     <div class="container">
       <div>Currently Viewing: <span id="visitor-count">0</span></div>
-      <div id="js-console"><ul></ul></div>
+      <div id="js-console" class="web-console"><ul></ul></div>
+      <hr>
       <div id="content-goes-here">
 
         <%= @inner %>
