--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -112,4 +112,4 @@ table tr:nth-child(even) > td {
 
 .web-console {height:75px; overflow:scroll; border:1px solid #ddd}
 .web-console ul {padding:0; margin:0}
-.web-console li {list-style-type:none; padding-left:1em}
+.web-console li {list-style-type:none; padding:0 0 0 1em}
